--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Cedarville+Cursive' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<header> International </header>
+<header><h1> International </h1></header>
 <div class="big-container">
     <div class="menu">
         <label><input type="radio" name="Menu" value="Home"><span>Home</span></label>
